gts/GenericTabset Builder/main/default/objects/LTX_Bank_Account__c/fields/LTX_Bank_Account_No__c.field-meta.xml
<CustomField>
    <fullName>LTX_Bank_Account_No__c</fullName>
    <label>Bank Account No.</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>