gts/GenericTabset Builder/main/default/objects/LTX_Bank_Account__c/fields/LTX_Contact__c.field-meta.xml
<CustomField>
    <fullName>LTX_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bank Accounts</relationshipLabel>
    <relationshipName>Bank_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>