gts/GenericTabset Builder/main/default/objects/LTX_Bank_Account__c/fields/LTX_Primary__c.field-meta.xml
<CustomField>
    <fullName>LTX_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>